// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Static Views will render Cookie Policy 1`] = `
"<div class="flex-none h-30 pt-2 pb-7 font-title text-blue-950 dark:text-blue-200">
  <p class="text-6xl mb-3 capitalize">Cookie Policy</p>
  <!--v-if-->
</div>
<ul class="flex flex-row gap-5 font-bold text-link mb-4" data-testid="breadcrumbs">
  <li><a href="/" class="">Home</a></li>
  <li><span class="mr-5"><i class="fas fa-angle-right"></i></span><span class="capitalize text-grey-800 dark:text-grey-200">Cookie Policy</span></li>
</ul>
<div class="flex flex-col gap-4">
  <p class="font-bold">Effective Date: February 14, 2024</p>
  <p> Thank you for visiting Bottom Time (the "Website"). This Cookie Policy explains how we use cookies and similar tracking technologies on our Website. By using our Website, you consent to the use of cookies in accordance with this policy. </p>
  <h1 class="text-2xl font-bold font-title">What are cookies?</h1>
  <p> Cookies are small text files that are stored on your device (computer, tablet, smartphone) when you visit a website. They are widely used to make websites work more efficiently and to provide information to website owners. </p>
  <h1 class="text-2xl font-bold font-title">Types of Cookies We Use</h1>
  <ul class="list-outside list-disc ml-10">
    <li><span class="font-bold">Essential Cookies:</span> These cookies are necessary for the functioning of our Website and cannot be disabled in our systems. They are usually set in response to actions made by you, such as setting your privacy preferences, logging in, or filling out forms. You can set your browser to block or alert you about these cookies, but some parts of the Website may not function properly. </li>
    <li><span class="font-bold">Analytics Cookies:</span> These cookies allow us to track and analyze how users interact with our Website, including which pages are visited most often and how users move around the site. This information helps us improve the performance and design of our Website. These cookies may be set by us or by third-party providers of analytics services. </li>
    <li><span class="font-bold">Marketing Cookies:</span> These cookies are used to track your browsing habits and activity in order to deliver targeted advertisements that are relevant to your interests. They may be used by advertising networks to build a profile of your interests and show you relevant ads on other sites. These cookies may be set through our Website by our advertising partners. </li>
  </ul>
  <h1 class="text-2xl font-bold font-title">Your Cookie Choices</h1>
  <p> You can choose to accept or decline cookies through your web browser settings. Most web browsers automatically accept cookies, but you can usually modify your browser settings to decline cookies if you prefer. Please note that blocking or deleting cookies may affect the functionality of our Website and your ability to access certain features. </p>
  <h1 class="text-2xl font-bold font-title">Third-Party Cookies</h1>
  <p> Some third-party services that we use on our Website, such as social media plugins and embedded content from external websites, may also use cookies to track your interaction with their content. We have no control over these cookies and recommend that you review the privacy policies of these third-party providers for more information about their cookie practices. </p>
  <h1 class="text-2xl font-bold font-title">Changes to this Cookie Policy</h1>
  <p> We reserve the right to update or change this Cookie Policy at any time. Any changes will be effective immediately upon posting the revised Cookie Policy on this page. We encourage you to review this Cookie Policy periodically for any changes. </p>
  <h1 class="text-2xl font-bold font-title">Contact Us</h1>
  <p> If you have any questions or concerns about this Cookie Policy or our use of cookies, please contact us at <a href="mailto:mailto:admin@bottomti.me">mailto:admin@bottomti.me</a>. </p>
  <p> By continuing to use our Website, you consent to the use of cookies as described in this Cookie Policy. </p>
</div>"
`;

exports[`Static Views will render Not Found Error page 1`] = `
"<div class="flex-none h-30 pt-2 pb-7 font-title text-blue-950 dark:text-blue-200">
  <p class="text-6xl mb-3 capitalize">Page Not Found</p>
  <p class="text-2xl capitalize">(404 Error)</p>
</div>
<div class="text-center" data-testid="not-found-message">
  <p class="text-lg mb-5"> Uh oh! The page you are looking for could not be found. Check your URL or click <a aria-current="page" href="/" class="router-link-active router-link-exact-active">here</a> to go back to the home page. </p>
  <p><img class="rounded-lg drop-shadow-md block m-auto w-1/2" src="/img/diver_lost.jpeg" alt="" aria-hidden="true"></p>
</div>"
`;

exports[`Static Views will render Privacy Policy 1`] = `
"<div class="flex-none h-30 pt-2 pb-7 font-title text-blue-950 dark:text-blue-200">
  <p class="text-6xl mb-3 capitalize">Cookie Policy</p>
  <!--v-if-->
</div>
<ul class="flex flex-row gap-5 font-bold text-link mb-4" data-testid="breadcrumbs">
  <li><a aria-current="page" href="/" class="router-link-active router-link-exact-active">Home</a></li>
  <li><span class="mr-5"><i class="fas fa-angle-right"></i></span><span class="capitalize text-grey-800 dark:text-grey-200">Cookie Policy</span></li>
</ul>
<div class="flex flex-col gap-4">
  <p class="font-bold">Effective Date: February 14, 2024</p>
  <p> Thank you for visiting Bottom Time (the "Website"). This Cookie Policy explains how we use cookies and similar tracking technologies on our Website. By using our Website, you consent to the use of cookies in accordance with this policy. </p>
  <h1 class="text-2xl font-bold font-title">What are cookies?</h1>
  <p> Cookies are small text files that are stored on your device (computer, tablet, smartphone) when you visit a website. They are widely used to make websites work more efficiently and to provide information to website owners. </p>
  <h1 class="text-2xl font-bold font-title">Types of Cookies We Use</h1>
  <ul class="list-outside list-disc ml-10">
    <li><span class="font-bold">Essential Cookies:</span> These cookies are necessary for the functioning of our Website and cannot be disabled in our systems. They are usually set in response to actions made by you, such as setting your privacy preferences, logging in, or filling out forms. You can set your browser to block or alert you about these cookies, but some parts of the Website may not function properly. </li>
    <li><span class="font-bold">Analytics Cookies:</span> These cookies allow us to track and analyze how users interact with our Website, including which pages are visited most often and how users move around the site. This information helps us improve the performance and design of our Website. These cookies may be set by us or by third-party providers of analytics services. </li>
    <li><span class="font-bold">Marketing Cookies:</span> These cookies are used to track your browsing habits and activity in order to deliver targeted advertisements that are relevant to your interests. They may be used by advertising networks to build a profile of your interests and show you relevant ads on other sites. These cookies may be set through our Website by our advertising partners. </li>
  </ul>
  <h1 class="text-2xl font-bold font-title">Your Cookie Choices</h1>
  <p> You can choose to accept or decline cookies through your web browser settings. Most web browsers automatically accept cookies, but you can usually modify your browser settings to decline cookies if you prefer. Please note that blocking or deleting cookies may affect the functionality of our Website and your ability to access certain features. </p>
  <h1 class="text-2xl font-bold font-title">Third-Party Cookies</h1>
  <p> Some third-party services that we use on our Website, such as social media plugins and embedded content from external websites, may also use cookies to track your interaction with their content. We have no control over these cookies and recommend that you review the privacy policies of these third-party providers for more information about their cookie practices. </p>
  <h1 class="text-2xl font-bold font-title">Changes to this Cookie Policy</h1>
  <p> We reserve the right to update or change this Cookie Policy at any time. Any changes will be effective immediately upon posting the revised Cookie Policy on this page. We encourage you to review this Cookie Policy periodically for any changes. </p>
  <h1 class="text-2xl font-bold font-title">Contact Us</h1>
  <p> If you have any questions or concerns about this Cookie Policy or our use of cookies, please contact us at <a href="mailto:mailto:admin@bottomti.me">mailto:admin@bottomti.me</a>. </p>
  <p> By continuing to use our Website, you consent to the use of cookies as described in this Cookie Policy. </p>
</div>"
`;

exports[`Static Views will render Server Error page 1`] = `
"<div class="flex-none h-30 pt-2 pb-7 font-title text-blue-950 dark:text-blue-200">
  <p class="text-6xl mb-3 capitalize">Server Error</p>
  <!--v-if-->
</div>
<div></div>"
`;

exports[`Static Views will render Terms of Service 1`] = `
"<div class="flex-none h-30 pt-2 pb-7 font-title text-blue-950 dark:text-blue-200">
  <p class="text-6xl mb-3 capitalize">Cookie Policy</p>
  <!--v-if-->
</div>
<ul class="flex flex-row gap-5 font-bold text-link mb-4" data-testid="breadcrumbs">
  <li><a aria-current="page" href="/" class="router-link-active router-link-exact-active">Home</a></li>
  <li><span class="mr-5"><i class="fas fa-angle-right"></i></span><span class="capitalize text-grey-800 dark:text-grey-200">Cookie Policy</span></li>
</ul>
<div class="flex flex-col gap-4">
  <p class="font-bold">Effective Date: February 14, 2024</p>
  <p> Thank you for visiting Bottom Time (the "Website"). This Cookie Policy explains how we use cookies and similar tracking technologies on our Website. By using our Website, you consent to the use of cookies in accordance with this policy. </p>
  <h1 class="text-2xl font-bold font-title">What are cookies?</h1>
  <p> Cookies are small text files that are stored on your device (computer, tablet, smartphone) when you visit a website. They are widely used to make websites work more efficiently and to provide information to website owners. </p>
  <h1 class="text-2xl font-bold font-title">Types of Cookies We Use</h1>
  <ul class="list-outside list-disc ml-10">
    <li><span class="font-bold">Essential Cookies:</span> These cookies are necessary for the functioning of our Website and cannot be disabled in our systems. They are usually set in response to actions made by you, such as setting your privacy preferences, logging in, or filling out forms. You can set your browser to block or alert you about these cookies, but some parts of the Website may not function properly. </li>
    <li><span class="font-bold">Analytics Cookies:</span> These cookies allow us to track and analyze how users interact with our Website, including which pages are visited most often and how users move around the site. This information helps us improve the performance and design of our Website. These cookies may be set by us or by third-party providers of analytics services. </li>
    <li><span class="font-bold">Marketing Cookies:</span> These cookies are used to track your browsing habits and activity in order to deliver targeted advertisements that are relevant to your interests. They may be used by advertising networks to build a profile of your interests and show you relevant ads on other sites. These cookies may be set through our Website by our advertising partners. </li>
  </ul>
  <h1 class="text-2xl font-bold font-title">Your Cookie Choices</h1>
  <p> You can choose to accept or decline cookies through your web browser settings. Most web browsers automatically accept cookies, but you can usually modify your browser settings to decline cookies if you prefer. Please note that blocking or deleting cookies may affect the functionality of our Website and your ability to access certain features. </p>
  <h1 class="text-2xl font-bold font-title">Third-Party Cookies</h1>
  <p> Some third-party services that we use on our Website, such as social media plugins and embedded content from external websites, may also use cookies to track your interaction with their content. We have no control over these cookies and recommend that you review the privacy policies of these third-party providers for more information about their cookie practices. </p>
  <h1 class="text-2xl font-bold font-title">Changes to this Cookie Policy</h1>
  <p> We reserve the right to update or change this Cookie Policy at any time. Any changes will be effective immediately upon posting the revised Cookie Policy on this page. We encourage you to review this Cookie Policy periodically for any changes. </p>
  <h1 class="text-2xl font-bold font-title">Contact Us</h1>
  <p> If you have any questions or concerns about this Cookie Policy or our use of cookies, please contact us at <a href="mailto:mailto:admin@bottomti.me">mailto:admin@bottomti.me</a>. </p>
  <p> By continuing to use our Website, you consent to the use of cookies as described in this Cookie Policy. </p>
</div>"
`;
